adapted to the core v5

--- a/.babelrc
+++ b/.babelrc
@@ -4,12 +4,13 @@
       "@babel/preset-env",
       {
         "targets": {
-          "node": "current"
+          "node": "12"
         }
       }
     ]
   ],
   "plugins": [
-    "babel-plugin-rewire"
+    "istanbul",
+    "rewire"
   ]
 }
